finish update task without notify manager and fix documentation
