# backend-swordhealth/src/routes/tasks/repository/task-repository/task.repository.js
@@ -32,5 +32,41 @@ class TaskRepository {
       throw error;
     }
   };
+  delete = async ({ taskId }) => {
+    const { transaction } = await this.database.getTransaction();
+    try {
+      await transaction("tasks").where("id", taskId).del();
+      this.database.commitTransaction({ transaction });
+    } catch (error) {
+      this.database.rollbackTransaction({ transaction });
+      throw error;
+    }
+  };
+  getById = async ({ taskId, userId }) => {
+    const { connection } = await this.database.getConnection();
+    try {
+      return await connection
+        .select("id", "user_id", "name", "summary", "perfomed_task")
+        .from("tasks")
+        .where("id", taskId)
+        .andWhere("user_id", userId)
+        .first();
+    } catch (error) {
+      throw error;
+    }
+  };
+  update = async ({ task, userId, taskId }) => {
+    const { transaction } = await this.database.getTransaction();
+    try {
+      await transaction("tasks")
+        .where("id", taskId)
+        .andWhere("user_id", userId)
+        .update(task);
+      this.database.commitTransaction({ transaction });
+    } catch (error) {
+      this.database.rollbackTransaction({ transaction });
+      throw error;
+    }
+  };
 }
 module.exports = { TaskRepository };
